[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgestan"
description = "Access the methods of a Stan model in Python."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Brian Ward", email = "bward@flatironinstitute.org" },
    { name = "Bob Carpenter", email = "bcarpenter@flatironinstitute.org" },
    { name = "Edward Roualdes", email = "eroualdes@csuchico.edu" },
]
requires-python = ">=3.9"
dependencies = ["numpy", "dllist"]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/roualdes/bridgestan"
"Bug Tracker" = "https://github.com/roualdes/bridgestan/issues"

[tool.setuptools.dynamic]
version = { attr = "bridgestan.__version.__version__" }

[tool.setuptools]
packages = ["bridgestan"]

[tool.setuptools.package-data]
"bridgestan" = ["py.typed"]

[project.optional-dependencies]
test = ["pandas", "pytest", "pytest-cov"]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["bridgestan"]
